Change some *cshtml files

--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,9 +3,15 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
-
-<h1>@ViewData["Title"]</h1>
-<h4>Nhập email của tài khoản.</h4>
+<style>
+    .send:focus{
+        box-shadow: none !important;
+        border: 1px solid #be1e2d;
+    }
+</style>
+<main class="container" style="height: 57vh">
+    <div class="colory-lg-3">
+<h4>Nhập email của bạn.</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,10 +22,12 @@
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Gửi</button>
+            <button style="border: 1px solid #be1e2d; background-color: #be1e2d; color: white" type="submit" class="btn send">Gửi</button>
         </form>
     </div>
 </div>
+</div>
+</main>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
