--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -71,4 +71,9 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
+    <script>
+     $(document).ready(function(){
+        $("#pagetitle").html("Đăng nhập");
+    });
+    </script>
 </main>
