--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -66,4 +66,9 @@
     @section Scripts {
         <partial name="_ValidationScriptsPartial" />
     }
+    <script>
+    $(document).ready(function(){
+        $("#pagetitle").html("Đăng ký");
+    });
+    </script>
 </main>
