--- a/Areas/Admin/Views/Dashboards/Dashboard1.cshtml
+++ b/Areas/Admin/Views/Dashboards/Dashboard1.cshtml
@@ -288,15 +288,16 @@
                                         <th>Tên</th>
                                         <th>Đơn hàng</th>
                                         <th>Sản phẩm</th>
-                                         <th>Số lượng</th>
+                  
                                         <th>Tình trạng đơn hàng</th>
                                         <th>Duyệt</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                          
+                         
                             @foreach (var item in Model){
-                                 <tr>
+                                   
+                                        <tr>
                                         <td>
                                             <div class="round-img">
                                                 <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
@@ -304,22 +305,32 @@
                                         </td>
                                         <td>@Html.DisplayFor(model => item.Order.Customer.AppUser.FullName)</td>
                                         <td><span>@Html.DisplayFor(model => item.OrderId)</span></td>
-                                        <td><span>@Html.DisplayFor(model => item.Product.ProductName)</span></td>
-                                        <td><span>@Html.DisplayFor(model => item.Quantity)</span></td>
+                                        <td><span style= "white-space: pre-line;
+}">
+                                            @Html.DisplayFor(model => item.Product.ProductName)</span></td>
+        
                                       
                                         @{string color = "badge badge-warning";    }
 
-                                        @if(item.Order.TransactStatus.Equals("done")){
+                                        @if(item.Order.TransactStatus.Equals("shipping")){
                                             color = "badge badge-success" ;
                                         }
                                          
                                         <td><span class= "@color" >@Html.DisplayFor(model => item.Order.TransactStatus)</span></td>
+                                        <td>
+                                              <a asp-action="Accecpt" asp-route-id="@item.OrderId">Duyet</a>  |
+                                             <a asp-action="Details" asp-route-id="@item.OrderId">Chi tiet</a> 
+                                            
+                                        </td>
                                     </tr>   
                                }
                                 </tbody>
                                
                              
                             </table>
+                            <script type = "text/javascript">
+                                   $("#product").val().replace(/\n/g, '<br/>');
+                            </script>
                         </div>
                     </div>
                 </div>
