--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -171,7 +171,7 @@
                             <i class="icon icon-chart-bar-33"></i><span class="nav-text">Một cái gì đó thông minh</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./chart-flot.html">Một cái gì đó thông minh hơn</a></li>
+                            <li><a asp-action= "Map" asp-area = "" asp-controller= "Home">Một cái gì đó thông minh hơn</a></li>
                         </ul>
                     </li>
                     <li class="nav-label">Bảng điều khiển</li>
@@ -181,7 +181,7 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="./ui-accordion.html">Giao dịch</a></li>
-                            <li><a href="./ui-alert.html">Đơn hàng sản phẩm </a></li>
+                            <li><a asp-controller="SaleManagers" asp-action="ProductBill" asp-area="Admin">Đơn hàng sản phẩm </a></li>
                             <li><a href="./ui-badge.html">Doanh số</a></li>
                         </ul>
                     </li>
