--- a/Areas/Admin/Views/Categories/Index.cshtml
+++ b/Areas/Admin/Views/Categories/Index.cshtml
@@ -17,9 +17,9 @@
                 <div class="welcome-text">
                     <h4>Hi, welcome back!</h4>
 
-                    <span class="ml-1">
-                        <a asp-action="Create">Tạo danh mục mới</a>
-                    </span>
+        
+                
+              
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
@@ -36,7 +36,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <h4 class="card-title"> Categories</h4>
+                        <a asp-action="Create"> <h4 class = "border-danger">Tạo danh mục mới</h4></a>
+                      
                     </div>
                     <div class="card-body">
                         <div class="table-responsive">
