--- a/Areas/Admin/Views/SaleManagers/Transaction.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Transaction.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<WEB2.Models.Staff>
+﻿@model IEnumerable<WEB2.Models.Order>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Transaction";
 }
-
-
 
 <head>
     <!-- Datatable -->
@@ -20,13 +18,13 @@
                 <div class="welcome-text">
                     <h4>Hi, welcome back!</h4>
 
-            
+              
                 </div>
             </div>
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="javascript:void(0)">Nhân sự</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Nhân viên</a></li>
+                    <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý bán hàng</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Giao dịch</a></li>
                 </ol>
             </div>
         </div>
@@ -36,60 +34,43 @@
         <div class="row">
             <div class="col-12">
                 <div class="card">
-                    <div class="card-header">
-                           <a asp-action="Create"> <h4 class = "border-danger">Thêm nhân viên</h4></a>
-                    </div>
+         
                     <div class="card-body">
                         <div class="table-responsive">
                             <table id="example" class="display" style="min-width: 845px">
                                 <thead>
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.WorkingDay)
+                                            đơn hàng
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.AppUser)
+                                           mã giao dịch
                                         </th>
+                                   
                                         <th>
-                                            @Html.DisplayNameFor(model => model.Inventory)
+
                                         </th>
-                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model) {
                                         <tr>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.WorkingDay)
+                                                @Html.DisplayFor(modelItem => item.Customer)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.AppUser.Id)
+                                                @Html.DisplayFor(modelItem => item.Customer)
                                             </td>
+                                          
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.Inventory.InventoryId)
-                                            </td>
-                                            <td>
-                                                <a asp-action="Edit" asp-route-id="@item.StaffId">Edit</a> |
-                                                <a asp-action="Details" asp-route-id="@item.StaffId">Details</a> |
-                                                <a asp-action="Delete" asp-route-id="@item.StaffId">Delete</a>
+                                                <a asp-action="Edit" asp-route-id="@item.ShipperId">Edit</a> |
+                                                <a asp-action="Details" asp-route-id="@item.ShipperId">Details</a> |
+                                                <a asp-action="Delete" asp-route-id="@item.ShipperId">Delete</a>
                                             </td>
                                         </tr>
                                     }
                                 </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.WorkingDay)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.AppUser)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.Inventory)
-                                        </th>
-                                        <th></th>
-                                    </tr>
-                                </tfoot>
+                                
                             </table>
                         </div>
                     </div>
