--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -251,11 +251,11 @@
                 <div class="col-md-3 col-sm6 sub">
                     <p>Chính sách</p>
                     @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
-                    <a class="nav-item" href="/policy/#baohanh">Chính sách bảo hành</a>
-                    <a class="nav-item" href="/policy/#doitra">Chính sách đổi trả</a>
-                    <a class="nav-item" href="/policy/#vanchuyen">Chính sách vận chuyển</a>
-                    <a class="nav-item" href="/policy/#baomat">Chính sách bảo mật</a>
-                    <a class="nav-item" href="/policy/#tragop">Chính sách trả góp</a>
+                    <a class="nav-item" href="./home/Insurance">Chính sách bảo hành</a>
+                    <a class="nav-item" href="./home/Refund">Chính sách đổi trả</a>
+                    <a class="nav-item" href="./home/Delivery">Chính sách vận chuyển</a>
+                    <a class="nav-item" href="./home/Privacy">Chính sách bảo mật</a>
+                    <a class="nav-item" href="./home/Installment">Chính sách trả góp</a>
                 </div>
                 <div class="col-md-3 col-sm6 sub">
                     <p>Liên hệ</p>
