--- a/Areas/Admin/Views/Staffs/Create.cshtml
+++ b/Areas/Admin/Views/Staffs/Create.cshtml
@@ -35,13 +35,34 @@
                         <select asp-for="InventoryId" class="form-control" asp-items="ViewBag.InventoryId"></select>
                     </div>
                     <div class="form-group">
-                        <label asp-for="UserId" class="control-label"></label>
-                        <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                        <label asp-for="AppUser.UserName" class="control-label"></label>
+                        <input asp-for="AppUser.UserName" class="form-control" />
+                        <span asp-validation-for="AppUser.UserName" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label asp-for="WorkingDay" class="control-label"></label>
-                        <input asp-for="WorkingDay" class="form-control" />
-                        <span asp-validation-for="WorkingDay" class="text-danger"></span>
+                        <label asp-for="AppUser.PasswordHash" class="control-label"></label>
+                        <input asp-for="AppUser.PasswordHash" class="form-control" type="password" />
+                        <span asp-validation-for="AppUser.PasswordHash" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AppUser.FullName" class="control-label"></label>
+                        <input asp-for="AppUser.FullName" class="form-control" />
+                        <span asp-validation-for="AppUser.FullName" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AppUser.PhoneNumber" class="control-label"></label>
+                        <input asp-for="AppUser.PhoneNumber" class="form-control" />
+                        <span asp-validation-for="AppUser.PhoneNumber" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AppUser.Email" class="control-label"></label>
+                        <input asp-for="AppUser.Email" class="form-control" />
+                        <span asp-validation-for="AppUser.Email" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="AppUser.Birthday" class="control-label"></label>
+                        <input asp-for="AppUser.Birthday" class="form-control" />
+                        <span asp-validation-for="AppUser.Birthday" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Create" class="btn btn-success" />
@@ -58,5 +79,7 @@
     <script src="~/js/custom.min.js"></script>
 </body>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+    await Html.RenderPartialAsync("_ValidationScriptsPartial");
+}
 }
