--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -171,7 +171,7 @@
                             <i class="icon icon-chart-bar-33"></i><span class="nav-text">Một cái gì đó thông minh</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a asp-action= "Map" asp-area = "" asp-controller= "Home">Một cái gì đó thông minh hơn</a></li>
+                            <li><a asp-action="Map" asp-area="" asp-controller="Home">Một cái gì đó thông minh hơn</a></li>
                         </ul>
                     </li>
                     <li class="nav-label">Bảng điều khiển</li>
@@ -180,9 +180,9 @@
                             <i class="icon icon-payment"></i><span class="nav-text">Quản lý bán hàng </span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="./ui-accordion.html">Giao dịch</a></li>
+                            <li><a href="./ui-accordion.html">Tất cả giao dịch</a></li>
                             <li><a asp-controller="SaleManagers" asp-action="ProductBill" asp-area="Admin">Đơn hàng sản phẩm </a></li>
-                            <li><a href="./ui-badge.html">Doanh số</a></li>
+                            <li><a href="./ui-badge.html">Hóa đơn đang chờ</a></li>
                         </ul>
                     </li>
 
@@ -192,17 +192,20 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a href="./uc-select2.html">Danh sách hàng tồn kho</a></li>
-                            <li><a href="./uc-nestable.html">Danh sách mặt hàng bán chạy</a></li>
-                            <li><a href="./uc-noui-slider.html">Danh sách mặt hàng sắp hết</a></li>
+                            <li><a href="./uc-nestable.html">Nhận hàng</a></li>
+                            <li><a href="./uc-noui-slider.html">Điều chuyển hàng</a></li>
+                            <li><a href="./uc-noui-slider.html">Kho phế liệu</a></li>
+                                    <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Danh mục</a></li>
                         </ul>
                     </li>
+
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-cart-simple"></i><span class="nav-text">Quản lý sản phẩm</span>
+                            <i class="icon icon-cart-simple"></i><span class="nav-text">Quản lý mua hàng</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a asp-controller="Products" asp-action="Index" asp-area="Admin">Sản phẩm</a></li>
-                            <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Danh mục</a></li>
+                            <li><a asp-controller="Products" asp-action="Index" asp-area="Admin">Yêu cầu báo giá</a></li>
+                            <li><a asp-controller="Categories" asp-action="Index" asp-area="Admin">Đơn mua hàng</a></li>
                             <li><a asp-controller="Suppliers" asp-action="Index" asp-area="Admin">Nhà cung cấp</a></li>
                         </ul>
                     </li>
@@ -292,8 +295,6 @@
     <!--**********************************
         Scripts
     ***********************************-->
-
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
